--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "sirv-cli": "^0.4.5",
     "svelte": "^3.12.1",
     "svelte-preprocess": "^2.16.0",
-    "tailwindcss": "^1.1.3"
+    "tailwindcss": "^1.1.3",
+    "uglify-js": ">=2.6.0"
   },
   "scripts": {
     "build": "rollup -c",
